<resources>
    <string name="app_name">Easy Recharge</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_scan">Recharge Now</string>
    <string name="menu_saved">Saved Cards</string>
    <string name="menu_history">Recharge History</string>
    <string name="menu_exit">Exit</string>

    <string name="home_btn1">Recharge Now</string>
    <string name="home_btn2">Save</string>
    <string name="home_txt1">Recharge Card No.</string>

</resources>
