<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recharge_now"
            android:icon="@drawable/ic_scan"
            android:title="@string/menu_scan" />
        <item
            android:id="@+id/nav_saved_cards"
            android:icon="@drawable/ic_save_black_24dp"
            android:title="@string/menu_saved" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_exit" />
    </group>

</menu>